--- a/style.css
+++ b/style.css
@@ -5,27 +5,28 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.aaa {
+header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+header img {
     width: 100%;
 }
 
-.aaa .more_inf {
+.more_inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-    .aaa { 
+    header { 
         text-align: center;
     }
 }
-.centered-main-page-element {
+
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -37,7 +38,7 @@ body {
     flex-grow: 1;
 }
 
-.task-row-wrapper {
+.main__add-task{
     display: flex;
 }
 
@@ -46,11 +47,13 @@ ul {
     padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
     list-style: none;
 }
 
-input,button{
+input,
+button {
     outline: none;
 }
 
@@ -152,7 +155,7 @@ button.delete img:hover {
 
 
 /* Completed */
-ul#completed-tasks label {
+#main__completed label {
     text-decoration: line-through;
     color: #888888;
 }
@@ -162,11 +165,11 @@ ul li input[type=text] {
     display: none;
 }
 
-ul li.editMode input[type=text] {
+.main__edit input[type=text] {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+.main__edit label {
     display: none;
 }
